<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="Age">年齡:</string>
    <string name="Tall2">身高:</string>
    <string name="Weight">實際體重:</string>
    <string name="BMI">BMI:</string>
    <string name="BMI2">BMI評估結果:</string>
    <string name="BMR">BMR:</string>
    <string name="zeroDec">0</string>
    <string name="zero">0</string>
    <string name="reset">"重置系統"</string>
    <string name="wantedWeight">理想體重</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="BackToInput">輸入資料</string>
    <string name="Advice">建議:</string>
    <string name="ThisProgram">本程式由</string>
    <string name="SID">1021845 廖啟惟</string>
    <string name="SID2">1041504 廖柏盛</string>
    <string name="Make">製作</string>
    <string name="save2">Save</string>
    <string name="load2">Load</string>
    <string name="save_success">儲存成功!</string>
    <string name="read_success">讀取成功!</string>
    <string name="read_fail">無資料!讀取失敗!</string>
    <string name="save_fail">資料未齊全!請輸入完整</string>

</resources>
