<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    tools:context=".Description">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView15"
        android:layout_alignParentTop="true"
        android:layout_marginTop="85dp"
        android:text="@string/ThisProgram"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="116dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="128dp"
        android:text="@string/SID"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="180dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView14"
        android:layout_alignStart="@+id/textView16"
        android:layout_marginStart="3dp"
        android:layout_marginTop="11dp"
        android:text="@string/SID2"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="222dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="77dp"
        android:layout_height="21dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="203dp"
        android:layout_marginEnd="-47dp"
        android:layout_toStartOf="@+id/button5"
        android:text="@string/Make"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="279dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView13"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-82dp"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:text="輸入資料"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="21dp"
        android:text="理想體重"
        tools:layout_editor_absoluteX="276dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView16"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        android:text="離開"
        tools:layout_editor_absoluteX="276dp"
        tools:layout_editor_absoluteY="277dp" />
</RelativeLayout>