<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="95dp"
        android:text="@string/BMI" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="140dp"
        android:text="@string/BMI2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="196dp"
        android:text="@string/BMR" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="146dp"
        android:text="大卡" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginStart="56dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textView5"
        android:text="" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:layout_marginStart="-57dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textView10"
        android:text="" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView10"
        android:layout_alignTop="@+id/textView6"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:text="" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:text="@string/BackToInput" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="324dp"
        android:layout_height="65dp"
        android:layout_alignEnd="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_marginTop="302dp"
        android:layout_marginEnd="-297dp"
        android:text="" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignTop="@+id/textView4"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_toStartOf="@+id/textView4"
        android:layout_toLeftOf="@+id/textView4"
        android:text="@string/Advice" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button3"
        android:layout_alignEnd="@+id/textView5"
        android:text="說明" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="254dp"
        android:text="理想體重" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView17"
        android:layout_alignEnd="@+id/textView10"
        android:layout_marginEnd="-8dp"
        android:text="" />
</RelativeLayout>